tests/if/class_in_then.lox
// error
if (true) class Foo {}
